--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -67,6 +67,7 @@ userprog_SRC += userprog/tss.c		# TSS management.
 #vm_SRC = vm/file.c			# Some file.
 vm_SRC = vm/page.c
 vm_SRC += vm/frame.c
+vm_SRC += vm/swap.c
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
